@@ -36,8 +36,9 @@ func stat(totnsec, pernsec int64, totbytes, perbytes uint64, height uint32) {
 
 
 func import_blockchain(dir string) {
+	var ch *chain.Chain
 	BlockDatabase := blockdb.NewBlockDB(dir, Magic)
-	chain := chain.NewChainExt(GocoinHomeDir, GenesisBlock, false, nil)
+	chain.NewChainExt(GocoinHomeDir, GenesisBlock, false, nil, &ch)
 
 	var bl *btc.Block
 	var er error
@@ -50,7 +51,7 @@ func import_blockchain(dir string) {
 	for {
 		now := time.Now().UnixNano()
 		if now-prv >= 10e9 {
-			stat(now-start, now-prv, totbytes, perbytes, chain.BlockTreeEnd.Height)
+			stat(now-start, now-prv, totbytes, perbytes, ch.BlockTreeEnd.Height)
 			prv = now  // show progress each 10 seconds
 			perbytes = 0
 		}
@@ -69,7 +70,7 @@ func import_blockchain(dir string) {
 
 		bl.Trusted = Trust
 
-		er, _, _ = chain.CheckBlock(bl)
+		er, _, _ = ch.CheckBlock(bl)
 
 		if er != nil {
 			if er.Error()!="Genesis" {
@@ -79,7 +80,7 @@ func import_blockchain(dir string) {
 			continue
 		}
 
-		er = chain.AcceptBlock(bl)
+		er = ch.AcceptBlock(bl)
 		if er != nil {
 			println("AcceptBlock failed:", er.Error())
 			os.Exit(1) // Such a thing should not happen, so let's better abort here.
@@ -90,12 +91,12 @@ func import_blockchain(dir string) {
 	}
 
 	stop := time.Now().UnixNano()
-	stat(stop-start, stop-prv, totbytes, perbytes, chain.BlockTreeEnd.Height)
+	stat(stop-start, stop-prv, totbytes, perbytes, ch.BlockTreeEnd.Height)
 
 	fmt.Println("Satoshi's database import finished in", (stop-start)/1e9, "seconds")
 
 	fmt.Println("Now saving the new database...")
-	chain.Close()
+	ch.Close()
 	fmt.Println("Database saved. No more imports should be needed.")
 }
 
